// Copyright 2022 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
// Use of this source code is governed by a MIT style
// license that can be found in the LICENSE file. The original repo for
// this file is https://github.com/Rosas99/smsx.
//

syntax = "proto3";

package sms.v1; // 告诉编译器此文件使用什么版本的语法

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

option go_package = "github.com/Rosas99/smsx/pkg/api/sms/v1;v1";

service SmsServer {
  rpc DeleteOrder(CreateTemplateRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {delete: "/v1/orders"};
  }
}


// string templateName = 1 [(validate.rules).string = {min_len: 1, max_len: 253, pattern: "[^\\s]+"}];; // 模板名称
message CreateTemplateRequest {
  string templateName = 1 [(validate.rules).string = {pattern: "[^\\s]+"}];; // 模板名称
  string content = 2  [(validate.rules).string = {pattern: "[^\\s]+"}]; // 模板内容
  string templateType = 3; // 模板类型-1验证码-2普通类型
  string brand = 4; // 品牌
  repeated  string providers = 5; // 供应商列表 // 数组使用repeated
  string tokenId = 6;
  string templateCode = 7;
  string sign = 8;
  string userId = 9;
  string templateCount = 10;
  string mobileCount = 11;
  string timeInterval = 12;
  string region = 13;
}

message CreateTemplateResponse {
  int64 orderID = 1;
}

message UpdateTemplateRequest {
  int64 id = 1;
  string templateName = 2 [(validate.rules).string = {pattern: "[^\\s]+"}];; // 模板名称
  string content = 3  [(validate.rules).string = {pattern: "[^\\s]+"}]; // 模板内容
  string templateType = 4; // 模板类型-1验证码-2普通类型
  string brand = 5; // 品牌
  repeated  string providers = 6; // 供应商列表 // 数组使用repeated
  string tokenId = 7;
  string templateCode = 8;
  string sign = 9;
  string userId = 10;
  string templateCount = 11;
  string mobileCount = 12;
  string timeInterval = 13;
  string region = 14;
}

message TemplateReply {
  int64 id = 1;
  string templateName = 2;
  string content = 3;
  string type = 4;
  string brand = 5;
  repeated string providers = 6; // 这里暂时使用string 后面再使用枚举
  string tokenId = 7;
  string templateCOde = 8;
  string sign = 9;
  string userId = 10;
  string extCode = 11;
  string templateCount = 12;
  string mobileCount = 13;
  string timeInterval = 14;
  string region = 15; // 这里暂时使用string 后面再使用枚举
  google.protobuf.Timestamp createdAt = 16; // 创建时间
  google.protobuf.Timestamp updatedAt = 17; // 更新时间
}

message ListTemplateRequest {
  int64 limit = 1;
  int64 offset = 2;
  string templateCode = 3;
  string extCode = 4;
}

message ListTemplateResponse {
  int64 totalCount = 1;
  repeated TemplateReply Templates = 2; // 类型 别名
}

message GetTemplateRequest {
  string id = 1;
}

message DeleteTemplateRequest {
  int64 id = 1;
}

// todo 通过模板获取短信历史列表